12-kubernetes-05-cni/policies/accept-pods-communication.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: accept-pods-communication
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hello-node
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: hello-node
