12-kubernetes-05-cni/policies/default-ingress-deny.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
  - Ingress
  - Egress
